--- a/charts/qubership-jaeger/templates/agent/daemon-set.yaml
+++ b/charts/qubership-jaeger/templates/agent/daemon-set.yaml
@@ -138,4 +138,8 @@ spec:
       tolerations:
         {{- toYaml .Values.agent.tolerations | nindent 8 }}
       {{- end }}
+      {{- if .Values.agent.affinity }}
+      affinity:
+        {{- toYaml .Values.agent.affinity | nindent 8 }}
+      {{- end }}
 {{- end }}
