fix: Validate docker-build-config.json structure and update platforms format

--- a/.github/docker-build-config.json
+++ b/.github/docker-build-config.json
@@ -16,5 +16,5 @@
           "context": "docker-transfer"
       }
   ],
-  "platforms" : ["linux/amd64,linux/arm64"]
+  "platforms" : "linux/amd64,linux/arm64"
   }
