--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,15 @@ on:
   push:
     branches:
       - '**'
+    paths-ignore:
+      - '.github/**'
+      - 'docs/**'
   pull_request:
     branches:
       - '**'
+    paths-ignore:
+      - '.github/**'
+      - 'docs/**'
 
 concurrency:
   # On main/release, we don't want any jobs cancelled so the sha is used to name the group
