--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,8 +1,2 @@
 # Назначает рецензента для всех файлов в репозитории
-* @nookyo
-
-# Назначает команду фронтенд и бэкенд для всех изменений в каталоге src/
-src/ @frontend-team @backend-team
-
-# Назначает рецензентов для всех файлов в каталоге docs/
-docs/ @docs-team
+* @borislavr
