--- a/.gitattributes
+++ b/.gitattributes
@@ -6,13 +6,13 @@
 .prettierignore text eol=lf
 
 * text=auto
+*.env text eol=lf
 *.go text eol=lf
 *.json text eol=lf
 *.md text eol=lf
 *.mod text eol=lf
 *.py text eol=lf
 *.robot text eol=lf
-*.sh text eol=lf
 *.sh text eol=lf
 *.sum text eol=lf
 *.tpl text eol=lf
