--- a/readiness-probe/Dockerfile
+++ b/readiness-probe/Dockerfile
@@ -5,8 +5,7 @@ ARG BUILDPLATFORM
 ARG TARGETOS
 ARG TARGETARCH
 ARG GOPROXY=""
-ENV GOSUMDB=off \
-    GO111MODULE=on
+ENV GO111MODULE=on
 
 WORKDIR /workspace
 
