--- a/charts/qubership-jaeger/templates/query/deployment.yaml
+++ b/charts/qubership-jaeger/templates/query/deployment.yaml
@@ -181,7 +181,7 @@ spec:
               {{- toYaml .Values.query.cmdlineParams | nindent 12 }}
             {{- end }}
           env:
-          {{- /* Section with Cassandra enviroment variables */}}
+          {{- /* Section with Cassandra environment variables */}}
           {{- if eq .Values.jaeger.storage.type "cassandra" }}
             - name: CASSANDRA_USERNAME
               valueFrom:
@@ -193,7 +193,7 @@ spec:
                 secretKeyRef:
                   name: {{ template "cassandraSchemaJob.secretName" . }}
                   key: password
-          {{- /* Section with ElasticSearch/OpenSearch enviroment variables */}}
+          {{- /* Section with ElasticSearch/OpenSearch environment variables */}}
           {{- else if eq .Values.jaeger.storage.type "elasticsearch" }}
             - name: ES_USERNAME
               valueFrom:
@@ -213,8 +213,8 @@ spec:
           livenessProbe:
             failureThreshold: 5
             httpGet:
-              path: /status
-              port: healthcheck
+              path: /
+              port: admin-http
               scheme: HTTP
             initialDelaySeconds: 15
             periodSeconds: 15
@@ -228,17 +228,17 @@ spec:
               port: 8080
               scheme: HTTP
             initialDelaySeconds: 1
-            periodSeconds: 300
+            periodSeconds: {{ .Values.readinessProbe.periodSeconds | default 10}}
             successThreshold: 1
-            timeoutSeconds: 600
+            timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds | default 5 }}
           {{- else }}
           readinessProbe:
             failureThreshold: 3
             httpGet:
-              path: /status
-              port: healtcheck
+              path: /
+              port: admin-http
               scheme: HTTP
-            initialDelaySeconds: 15
+            initialDelaySeconds: 1
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
