--- a/.github/workflows/cleanup-old-docker-container.yml
+++ b/.github/workflows/cleanup-old-docker-container.yml
@@ -21,7 +21,8 @@ on:
         dry-run:
           description: "Enable dry-run mode"
           required: false
-          default: "false"
+          default: false
+          type: boolean
 jobs:
     cleanup:
       runs-on: ubuntu-latest
