--- a/.github/workflows/cleanup-old-docker-container.yml
+++ b/.github/workflows/cleanup-old-docker-container.yml
@@ -23,6 +23,10 @@ on:
           required: false
           default: false
           type: boolean
+permissions:
+    contents: read
+    pull-requests: write
+          
 jobs:
     cleanup:
       runs-on: ubuntu-latest
