--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -17,8 +17,12 @@ on:
         type: boolean
         default: false
         description: 'Dry run'
+permissions: {}
+
 jobs:
   load_config:
+    permissions:
+      contents: read
     name: "Load Docker Configuration"
     runs-on: ubuntu-latest
     outputs:
@@ -57,6 +61,8 @@ jobs:
   perform-version:
     runs-on: ubuntu-latest
     needs: [load_config]
+    permissions:
+      contents: read
     outputs:
       metadata: "${{ steps.metadata.outputs.result }}"
       tags: "${{ steps.prepare_tags.outputs.tags }}"
@@ -93,6 +99,9 @@ jobs:
     name: "Build Docker Images"
     needs: [load_config, perform-version]
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     strategy:
       fail-fast: false
       matrix:
