ci: fix dev build for dependabot

--- a/.github/dev-metadata-config.yml
+++ b/.github/dev-metadata-config.yml
@@ -4,5 +4,6 @@ branches-template:
 - hotfix/*: "{{ref-name}}-{{timestamp}}, {{ref-name}}-{{short-sha}}, {{short-sha}}"
 - bugfix/*: "{{ref-name}}-{{timestamp}}, {{ref-name}}-{{short-sha}}, {{short-sha}}"
 - chore/*: "{{ref-name}}-{{timestamp}}, {{ref-name}}-{{short-sha}}, {{short-sha}}"
+- dependabot/*: "{{ref-name}}-{{timestamp}}, {{ref-name}}-{{short-sha}}, {{short-sha}}"
 distribution-tags:
 - main: "main"
