--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,5 +48,5 @@ jobs:
         no-cache: true
         context: ${{ matrix.component.context }}
         file: ${{ matrix.component.file }}
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         push: false
