chore(ci): update default values and add comments

--- a/.github/workflows/cleanup-old-docker-container.yml
+++ b/.github/workflows/cleanup-old-docker-container.yml
@@ -10,14 +10,20 @@ on:
         description: "Number of days to keep container versions"
         required: false
         default: "7"
+      # Include to cleanup images for all tags, branches
+      # Using the "excluded-tags" we will remove from the delete process all images that should be save 
       included-tags:
         description: "Tags to include for deletion"
         required: false
         default: "*"
+      # Exclude (by default) from cleanup docker images the following patterns:
+      # * "main", "latest" - branch names
+      # * "release/*" - release branch names
+      # * "*.*" - tag names, like (1.2.3, etc)
       excluded-tags:
         description: "Tags to exclude from deletion"
         required: false
-        default: "main,latest,release*,*.*"
+        default: "main*,latest*,release*,*.*"
       dry-run:
         description: "Enable dry-run mode"
         required: false
