--- a/.github/workflows/link-checker.yaml
+++ b/.github/workflows/link-checker.yaml
@@ -16,9 +16,6 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@v2
         with:
-          # Check all markdown, 429 Too many requests also acceptable
           args: --base . --verbose --no-progress './**/*.md' --accept 100..=103,200..=299,429
-          # Use json as output format (instead of markdown)
           format: markdown
-          # Don't fail action on broken links
-          fail: false
+          fail: true
