--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Set up Kubectl
       run: |
-        curl -sLo ./kubectl https://dl.k8s.io/release/`curl -LS https://dl.k8s.io/release/stable.txt`/bin/linux/amd64/kubectl
+        curl -sLo ./kubectl https://dl.k8s.io/release/$(curl -LS https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl
         chmod +x ./kubectl
         sudo mv ./kubectl /usr/local/bin/
       shell: bash
@@ -312,7 +312,7 @@ jobs:
         while [[ $attempt -le $max_attempts ]]; do
           echo "Attempt $attempt/$max_attempts: Checking tests results..."
           logs=$(kubectl logs -l name=jaeger-integration-tests-runner -n ${{ env.namespace }} --tail=-1)
-          if [[ -n $(echo "$logs" | grep -E "Report:  /opt/robot/output/report.html") ]]; then
+          if echo "$logs" | grep -qE "Report:  /opt/robot/output/report.html" ; then
             stats_line=$(echo "$logs" | grep -E '[0-9]+\ tests,\ [0-9]+\ passed,\ [0-9]+\ failed(,\ [0-9]+\ skipped)?' | tail -n 1)
             read total passed failed skipped <<< $(echo "$stats_line" | awk '{ gsub(",", "", $0); print $1, $3, $5, $7}')
             if [[ "$failed" == "0" ]]; then
@@ -412,31 +412,36 @@ jobs:
     - name: Generate Status Summary
       if: always()
       run: |
-        echo "## Install Jaeger" >> $GITHUB_STEP_SUMMARY
-        echo "Check jaeger status: ${{ steps.check_jaeger.outputs.status || '❓unknown' }}" >> $GITHUB_STEP_SUMMARY
-        echo "${{ steps.check_jaeger.outputs.details || '❓unknown' }}" >> $GITHUB_STEP_SUMMARY
-        echo 'Pods running in jaeger namespace:' >> $GITHUB_STEP_SUMMARY
-        echo '```sh' >> $GITHUB_STEP_SUMMARY
-        echo "${{ steps.jaeger_artifacts.outputs.jaeger_pods || '❓unknown' }}" >> $GITHUB_STEP_SUMMARY
-        echo '```' >> $GITHUB_STEP_SUMMARY
+        cat <<EOF >> $GITHUB_STEP_SUMMARY
+        ## Install Jaeger
+        Check jaeger status: ${{ steps.check_jaeger.outputs.status || '❓unknown' }}
+        ${{ steps.check_jaeger.outputs.details || '❓unknown' }}
+        Pods running in jaeger namespace:
+        \`\`\`sh
+        ${{ steps.jaeger_artifacts.outputs.jaeger_pods || '❓unknown' }}
+        \`\`\`
+        EOF
 
-        echo "## Check integration tests results" >> $GITHUB_STEP_SUMMARY
-        echo "Check integration tests status: ${{ steps.check_integration_tests.outputs.status || '❓unknown' }}" >> $GITHUB_STEP_SUMMARY
-        echo "${{ steps.check_integration_tests.outputs.details || '' }}" >> $GITHUB_STEP_SUMMARY
-        echo '```' >> $GITHUB_STEP_SUMMARY
-        echo "Total tests: ${{ steps.check_integration_tests.outputs.total || '❓unknown' }}" >> $GITHUB_STEP_SUMMARY
-        echo "Failed tests: ${{ steps.check_integration_tests.outputs.failed || '❓unknown' }}" >> $GITHUB_STEP_SUMMARY
-        echo "Skipped tests: ${{ steps.check_integration_tests.outputs.skipped || '❓unknown' }}" >> $GITHUB_STEP_SUMMARY
-        echo "Passed tests: ${{ steps.check_integration_tests.outputs.passed || '❓unknown' }}" >> $GITHUB_STEP_SUMMARY
-        echo "${{ steps.check_integration_tests.outputs.warning || '' }}" >> $GITHUB_STEP_SUMMARY
-        echo "${{ steps.check_integration_tests.outputs.details || '' }}" >> $GITHUB_STEP_SUMMARY
-        echo '```' >> $GITHUB_STEP_SUMMARY
+        cat <<EOF >> $GITHUB_STEP_SUMMARY
+        ## Check integration tests results
+        Check integration tests status: ${{ steps.check_integration_tests.outputs.status || '❓unknown' }}
+        ${{ steps.check_integration_tests.outputs.details || '' }}
+        \`\`\`
+        Total tests: ${{ steps.check_integration_tests.outputs.total || '❓unknown' }}
+        Failed tests: ${{ steps.check_integration_tests.outputs.failed || '❓unknown' }}
+        Skipped tests: ${{ steps.check_integration_tests.outputs.skipped || '❓unknown' }}
+        Passed tests: ${{ steps.check_integration_tests.outputs.passed || '❓unknown' }}
+        ${{ steps.check_integration_tests.outputs.warning || '' }}
+        \`\`\`
+        EOF
 
-        echo "<details>" >> $GITHUB_STEP_SUMMARY
-        echo "<summary><b>🔍 See full test logs</b></summary>" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "### Test Summary" >> $GITHUB_STEP_SUMMARY
-        echo '```sh' >> $GITHUB_STEP_SUMMARY
-        echo "${{ steps.check_integration_tests.outputs.test_results || '❓unknown' }}" >> $GITHUB_STEP_SUMMARY
-        echo '```' >> $GITHUB_STEP_SUMMARY
-        echo "</details>" >> $GITHUB_STEP_SUMMARY
+        cat <<EOF >> $GITHUB_STEP_SUMMARY
+        <details>
+        <summary><b>🔍 See full test logs</b></summary>
+
+        ### Test Summary
+        \`\`\`sh
+        ${{ steps.check_integration_tests.outputs.test_results || '❓unknown' }}
+        \`\`\`
+        </details>
+        EOF
