--- a/integration-tests/Dockerfile
+++ b/integration-tests/Dockerfile
@@ -2,14 +2,8 @@
 # checkov:skip=CKV_DOCKER_3: User already set in the base image
 FROM ghcr.io/netcracker/qubership-docker-integration-tests:feature-remove-openshift-lib-usage
 
-# User with UID=1000 already added in ghcr.io/netcracker/qubership-docker-integration-tests image
-ENV ROBOT_OUTPUT=/opt/robot/output \
-    SERVICE_CHECKER_SCRIPT=${ROBOT_HOME}/jaeger_pods_checker.py
+# Env ${ROBOT_HOME} is set in the base image as /opt/robot
+ENV SERVICE_CHECKER_SCRIPT=${ROBOT_HOME}/jaeger_pods_checker.py
 
 # Copy tests source code
 COPY robot/ ${ROBOT_HOME}/
-
-# Create output directory for test results
-RUN mkdir -p "${ROBOT_OUTPUT}"
-
-VOLUME ["${ROBOT_OUTPUT}"]
