--- a/integration-tests/Dockerfile
+++ b/integration-tests/Dockerfile
@@ -1,6 +1,6 @@
 # Based on python:3.13.3-alpine3.21
 # checkov:skip=CKV_DOCKER_3: User already set in the base image
-FROM ghcr.io/netcracker/qubership-docker-integration-tests:feature-remove-openshift-lib-usage
+FROM ghcr.io/netcracker/qubership-docker-integration-tests:0.3.0
 
 # Env ${ROBOT_HOME} is set in the base image as /opt/robot
 ENV SERVICE_CHECKER_SCRIPT=${ROBOT_HOME}/jaeger_pods_checker.py
