chore: update cleanup-old-docker-container.yml and add a new parameter package-type

--- a/.github/workflows/cleanup-old-docker-container.yml
+++ b/.github/workflows/cleanup-old-docker-container.yml
@@ -49,5 +49,6 @@ jobs:
           included-tags: ${{ github.event.inputs.included-tags || '*' }}
           excluded-tags: ${{ github.event.inputs.excluded-tags || 'main,latest,release*,*.*' }}
           dry-run: ${{ github.event.inputs.dry-run || 'false' }}
+          package-type: container
         env:
           PACKAGE_TOKEN: ${{ secrets.GH_RWD_PACKAGE_TOKEN }}
