--- a/charts/qubership-jaeger/templates/integration-tests/test-config.yaml
+++ b/charts/qubership-jaeger/templates/integration-tests/test-config.yaml
@@ -6,6 +6,10 @@ metadata:
   name: tests-config
   labels:
     app: jaeger-tests
+  annotations:
+    "helm.sh/hook": post-install,post-upgrade
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
+    "helm.sh/hook-weight": "-4"
 data:
   {{- if include "jaeger.monitoredImages" . }}
   images: {{ include "jaeger.monitoredImages" . }}
