--- a/charts/qubership-jaeger/templates/integration-tests/write-status-role-binding.yaml
+++ b/charts/qubership-jaeger/templates/integration-tests/write-status-role-binding.yaml
@@ -11,6 +11,10 @@ metadata:
     app.kubernetes.io/component: jaeger-integration-tests
     app.kubernetes.io/part-of: jaeger
     app.kubernetes.io/version: {{ .Chart.AppVersion }}
+  annotations:
+    "helm.sh/hook": post-install,post-upgrade
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
+    "helm.sh/hook-weight": "-5"
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.integrationTests.serviceAccount.name }}
