--- a/.github/workflows/cleanup-old-containers-test.yaml
+++ b/.github/workflows/cleanup-old-containers-test.yaml
@@ -43,12 +43,12 @@ jobs:
           echo "**Excluded tags**: ${{ github.event.inputs.excluded-tags || 'main,latest,release*,*.*' }}"
           echo "**Dry-run**: ${{ github.event.inputs.dry-run || 'false' }}"
       - name: Run Container Package Cleanup Action
-        uses:  nookyo/qubership-workflow-hub/actions/container-package-cleanup@main
+        uses: nookyo/qubership-workflow-hub/actions/container-package-cleanup@main
         with:
           threshold-days: ${{ github.event.inputs.threshold-days || 7 }}
           included-tags: ${{ github.event.inputs.included-tags || '*' }}
           excluded-tags: ${{ github.event.inputs.excluded-tags || 'main,latest,release*,*.*' }}
-          dry-run: 'true'
+          dry-run: ${{ github.event.inputs.dry-run }}
           package-type: container
         env:
           PACKAGE_TOKEN: ${{ secrets.GH_RWD_PACKAGE_TOKEN }}
