--- a/.github/workflows/cleanup-old-containers-test.yaml
+++ b/.github/workflows/cleanup-old-containers-test.yaml
@@ -30,10 +30,21 @@ on:
         default: true
         type: boolean
 
+permissions:
+  contents: read
+  packages: read
+
 jobs:
   cleanup:
     runs-on: ubuntu-latest
     steps:
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GH_RWD_PACKAGE_TOKEN }}
+
       - name: "Summary"
         run: |
           echo "**Event**: ${{ github.event_name }}"
