fix: fixed lint issue

--- a/.github/workflows/link-checker.yaml
+++ b/.github/workflows/link-checker.yaml
@@ -27,8 +27,6 @@ jobs:
             --accept 100..=103,200..=299,429
             --cookie-jar cookies.json
             --exclude-all-private
-            --exclude https://kubernetes.io/docs/reference/using-api/deprecation-guide/#v1-22 ./docs
-            --exclude https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#securitycontext-v1-core ./docs
-            --exclude https://kubernetes.io/docs/reference/using-api/deprecation-guide/#ingress-v122 ./docs
+            --insecure ./docs
           format: markdown
           fail: true
