chore: fix linters foundings

--- a/charts/qubership-jaeger/templates/spark-dependencies/truststore-secret.yaml
+++ b/charts/qubership-jaeger/templates/spark-dependencies/truststore-secret.yaml
@@ -17,5 +17,5 @@ metadata:
     {{- toYaml .Values.spark.annotations | nindent 4 }}
   {{- end }}
 data:
-  password: {{ .Values.spark.truststorePassword | default "passw0rd" | toString | b64enc }}
+  password: {{ if .Values.spark.truststorePassword }}{{ .Values.spark.truststorePassword | toString | b64enc }}{{ else }}{{ randAlphaNum 20 | b64enc }}{{ end }}
 {{- end }}
