fix: updated config

--- a/charts/qubership-jaeger/templates/collector/configmap-config.yaml
+++ b/charts/qubership-jaeger/templates/collector/configmap-config.yaml
@@ -78,7 +78,7 @@ data:
                 {{- end }}
                 {{- end }}
               connection:
-                local_dc: {{ include "cassandraSchemaJob.datacenter" . }}
+                datacenter: {{ include "cassandraSchemaJob.datacenter" . }}
                 servers:
                   {{- if .Values.cassandraSchemaJob.host }}
                   - {{ .Values.cassandraSchemaJob.host -}}
