--- a/charts/qubership-jaeger/templates/query/configmap-config.yaml
+++ b/charts/qubership-jaeger/templates/query/configmap-config.yaml
@@ -94,7 +94,7 @@ data:
                 {{- end }}
                 {{- end }}
               connection:
-                local_dc: {{ include "cassandraSchemaJob.datacenter" . }}
+                datacenter: {{ include "cassandraSchemaJob.datacenter" . }}
                 servers:
                   {{- if .Values.cassandraSchemaJob.host }}
                   - {{ .Values.cassandraSchemaJob.host -}}
