--- a/charts/qubership-jaeger/templates/collector/configmap-config.yaml
+++ b/charts/qubership-jaeger/templates/collector/configmap-config.yaml
@@ -69,6 +69,9 @@ data:
                 create: {{ .Values.cassandraSchemaJob.createKeyspace | default "true" }}
                 keyspace: {{ .Values.cassandraSchemaJob.keyspace | quote }}
                 datacenter: {{ include "cassandraSchemaJob.datacenter" . }}
+                {{- if eq .Values.cassandraSchemaJob.mode "test" }}
+                replication: "{'class': 'SimpleStrategy', 'replication_factor': '1'}"
+                {{- end }}
                 {{- if .Values.cassandraSchemaJob.ttl }}
                 {{- if hasKey .Values.cassandraSchemaJob.ttl "trace" }}
                 trace_ttl: {{ .Values.cassandraSchemaJob.ttl.trace | quote }}
